syntax = "proto3";

package dbauth.authenticator.messages;

service Authenticator {
        rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse) {}
}

message Credentials {
        string user = 1;
        bytes hashedPassword = 2;
}

message AuthenticateRequest {
        string identity = 1;
        bytes salt = 2;
}

message AuthenticateResponse {
        enum Status {
                ERROR = 0;
                SUCCESS = 1;
        }
        Status status = 1;
        string message = 2;
        Credentials credentials = 3;
}